Added generics support to the grammar: Type<T, T1...>